fix display on small screens

--- a/app/components/mobile/mobile.scss
+++ b/app/components/mobile/mobile.scss
@@ -287,6 +287,10 @@ article.mobile {
                     margin: 0.3em;
                     margin-top: 0;
                     padding-top: 0.3em;
+
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                 }
 
                 h2 {
